# iroh-ffi

./: .gitignore  Cargo.toml  IrohLib.podspec  IrohLibFramework.podspec  MIGRATION_REPORT.md  Package.swift  README.md  RELEASE.md  make_swift.sh  pyproject.toml  todo.txt
.claude/: settings.json
.github/workflows/: ci.yml.disabled  release.yml.disabled
Iroh.xcframework/ios-arm64_x86_64-simulator/Iroh.framework/: Info.plist
Iroh.xcframework/ios-arm64_x86_64-simulator/Iroh.framework/Headers/: iroh_ffiFFI.h
Iroh.xcframework/macos-arm64/Iroh.framework/Headers/: iroh_ffiFFI.h
IrohLib/: Package.swift  README.md
IrohLib/Sources/: README.md
IrohLib/Sources/BlobDemo/: main.swift
IrohLib/Sources/GossipChat/: GossipChat.swift
IrohLib/Sources/GossipReceiver/: main.swift
IrohLib/Sources/GossipSender/: main.swift
IrohLib/Sources/GossipSenderSwift5/: main.swift
IrohLib/Sources/IrohLib/: IrohLib.swift
IrohLib/Tests/IrohLibTests/: IrohLibTests.swift
examples/: BlobDemo.swift  DocDemo.swift  GossipChat.swift  README.md  blob_demo.py  blob_demo.rs  doc_demo.py  doc_demo.rs  gossip_chat.py  gossip_chat.rs
examples/tests/: common.sh  run_all_tests.sh  test_blobs.sh  test_docs.sh  test_gossip.sh  verify_swift_sync.sh
iroh-js/: Cargo.toml
iroh-js/src/: node.rs
kotlin/lib/src/main/kotlin/computer/iroh/: iroh_ffi.kt
python/: blob_test.py  gossip_test.py  node_test.py
src/: author.rs  blob.rs  doc.rs  endpoint.rs  gossip.rs  key.rs  lib.rs  net.rs  node.rs  node_addr.rs  tag.rs  ticket.rs
