[package]
name = "iroh-ffi"
version = "0.97.0"
edition = "2021"
publish = false
autoexamples = false
readme = "README.md"
description = "A toolkit for building distributed applications"
license = "MIT OR Apache-2.0"
authors = ["n0 team"]
repository = "https://github.com/n0-computer/iroh-ffi"
homepage = "https://iroh.computer"
documentation = "https://iroh.computer/docs"

rust-version = "1.85"

[workspace]
# iroh-js migration to 0.95 requires significant rewrite of blob.rs, doc.rs, etc.
# The RPC client APIs have been completely removed in favor of direct API access
# members = ["iroh-js"]

[package.metadata.maturin]
name = "iroh"

[lib]
name = "iroh_ffi"
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.80"
iroh = { version = "0.97", features = ["address-lookup-mdns"] }
iroh-base = { version = "0.97" }
thiserror = "2"
tokio = { version = "1.44", features = ["fs", "rt-multi-thread", "sync"] }
uniffi = { version = "0.28.0", features = ["cli", "tokio"] }
url = "2.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde = { version = "1.0.217", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["debug", "display", "from"] }

[build-dependencies]
uniffi = { version = "0.28.0", features = ["build"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
