# Exclude from workspace - migration in progress
[workspace]

[package]
edition = "2021"
name = "number0_iroh"
version = "0.95.0"
license = "MIT OR Apache-2.0"
authors = ["n0 team"]
repository = "https://github.com/n0-computer/iroh-ffi"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16", default-features = false, features = ["napi8", "error_anyhow", "async", "chrono_date"] }
napi-derive = "2.16"
anyhow = "1.0.95"
async-trait = "0.1.80"
blake3 = "1.3.3"
bytes = "1"
data-encoding = { version = "2.3.3" }
iroh = { version = "0.95" }
iroh-base = { version = "0.95" }
iroh-io = { version = "0.6" }
iroh-gossip = { version = "0.95" }
iroh-docs = { version = "0.95" }
iroh-blobs = { version = "0.97" }
iroh-metrics = { version = "0.37" }
iroh-tickets = { version = "0.2" }
n0-future = "0.3.0"
n0-snafu = "0.2"
libc = "0.2.141"
num_cpus = { version = "1.15.0" }
thiserror = "2"
tokio = "1.44"
tokio-util = { version = "0.7", features = ["io-util", "io", "rt"] }
url = "2.5"
futures = "0.3.28"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17" }
chrono = "0.4.38"
derive_more = { version = "2.0.1", features = ["debug", "display", "from"] }
futures-lite = "2.6.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.113"
rand = "0.9"

[build-dependencies]
napi-build = "2.2"
